Add logo assets + wip adding more neutral colors

--- a/ui-ngx/package.json
+++ b/ui-ngx/package.json
@@ -175,5 +175,6 @@
     "rc-virtual-list": "3.4.13",
     "read-package-json": "6.0.0",
     "cacache": "17.0.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
